--- a/LCUD_Project/index.html
+++ b/LCUD_Project/index.html
@@ -7,43 +7,33 @@
   
   
   <style type="text/css"></style>
-</head><body style="color: black; background-color: rgb(229, 229, 229); background-image: url(images/background.jpg);" alink="#000099" link="#000099" vlink="#a700a7">
+</head><body style="color: black; background-color: rgb(229, 229, 229); background-image: url(images/bg.jpg);" alink="#000099" link="#000099" vlink="#a700a7">
 <br>
 
 <br>
 
-<table style="text-align: left; width: 1004px; background-color: rgb(51, 0, 153); margin-left: auto; margin-right: auto; height: 285px;" border="0" cellpadding="0" cellspacing="0">
-
-  <tbody>
-    <tr>
-      <td style="background-color: rgb(137, 207, 240); vertical-align: bottom;" colspan="1" rowspan="1"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(185, 161, 117); text-align: center; vertical-align: bottom;" colspan="1" rowspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<br style="font-family: American Typewriter;">
-      </td>
-    </tr>
-  </tbody>
-</table>
+<br>
 
 <div style="text-align: center;"><big style="font-weight: bold;"><big><big><span style="font-family: American Typewriter;">LCUD - Group 10</span></big></big></big><br>
 <table style="text-align: left; width: 963px; height: 48px; margin-left: auto; margin-right: auto;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      
-      <td style="vertical-align: top; text-align: center; background-color: white; width: 472px;"><span style="font-family: American Typewriter;">Duration:<br>
-      </span> </td>
-      <td style="vertical-align: top; background-color: white; text-align: center; width: 471px;"><span style="font-family: American Typewriter;">Distance:</span></td>
-    </tr>
-    <tr>
-      
-      <td style="vertical-align: top; background-color: white; text-align: center; width: 472px;"><span style="font-family: American Typewriter;">Temperature:</span><br>
+      <td style="vertical-align: top; background-color: rgb(185, 161, 117); text-align: center; width: 471px;">Sensor
+number:<br>
+      <br>
+1<br>
       </td>
-      <td style="vertical-align: top; background-color: white; width: 471px;">
-      <div style="text-align: center;"><span style="font-family: American Typewriter;">Volume:</span></div>
-
-      </td>
+      <td style="vertical-align: top; text-align: center; background-color: rgb(137, 207, 240); width: 472px;">
+      <div style="text-align: left;"><span style="font-family: American Typewriter;">Duration:</span><br>
+      <span style="font-family: American Typewriter;">
+Temperature:</span><br>
+      <span style="font-family: American Typewriter;">
+Distance:</span><br>
+      <span style="font-family: American Typewriter;">
+Volume:</span><br>
+      <span style="font-family: American Typewriter;">
+      </span></div>
+ </td>
     </tr>
   </tbody>
 </table>
