update UI, add favicon

--- a/LCUD_Project/index.html
+++ b/LCUD_Project/index.html
@@ -7,6 +7,9 @@
   
   
   <style type="text/css"></style>
+  
+  <link rel="icon" href="favicon.ico">
+
 </head><body style="color: black; background-color: rgb(229, 229, 229); background-image: url(images/bg.jpg);" alink="#000099" link="#000099" vlink="#a700a7">
 <br>
 
@@ -18,22 +21,20 @@
 <table style="text-align: left; width: 963px; height: 48px; margin-left: auto; margin-right: auto;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="vertical-align: top; background-color: rgb(185, 161, 117); text-align: center; width: 471px;">Sensor
-number:<br>
+      <td style="vertical-align: top; background-color: rgb(153, 255, 255); width: 471px; text-align: center;">
+      <div style="background-color: white;"><span style="font-family: American Typewriter;"><br>
+Sensor Number:</span><br>
       <br>
-1<br>
+      <br>
+      </div>
       </td>
-      <td style="vertical-align: top; text-align: center; background-color: rgb(137, 207, 240); width: 472px;">
-      <div style="text-align: left;"><span style="font-family: American Typewriter;">Duration:</span><br>
-      <span style="font-family: American Typewriter;">
-Temperature:</span><br>
-      <span style="font-family: American Typewriter;">
-Distance:</span><br>
-      <span style="font-family: American Typewriter;">
-Volume:</span><br>
-      <span style="font-family: American Typewriter;">
-      </span></div>
- </td>
+      <td style="vertical-align: top; text-align: center; background-color: rgb(153, 255, 255); width: 472px;">
+      <div style="text-align: left; background-color: white;"><span style="font-family: American Typewriter;">Duration:</span><br>
+      <span style="font-family: American Typewriter;">Temperature:</span><br>
+      <span style="font-family: American Typewriter;">Distance:</span><br>
+      <span style="font-family: American Typewriter;">Volume:</span><br>
+      <span style="font-family: American Typewriter;"> </span></div>
+      </td>
     </tr>
   </tbody>
 </table>
