--- a/LCUD_Project/index.html
+++ b/LCUD_Project/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
   
-  <meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type">
-  <title>LCUD</title>
+  <meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>LCUD</title>
+  
 
   
   
   <style type="text/css"></style>
   
-  <link rel="icon" href="favicon.ico">
-
-</head><body style="color: black; background-color: rgb(229, 229, 229); background-image: url(images/bg.jpg);" alink="#000099" link="#000099" vlink="#a700a7">
+  <link rel="icon" href="favicon.ico"></head><body style="color: black; background-color: rgb(229, 229, 229); background-image: url(images/bg.jpg);" alink="#000099" link="#000099" vlink="#a700a7">
 <br>
 
 <a href="Group%2010.html"><img style="border: 0px solid ; width: 86px; height: 25px;" name="GI" alt="Group Info" title="Group Info" src="images/GI1.png" onmouseover="document.GI.src='images/GI2.png'" onmouseup="document.GI.src='images/GI1.png'" onmouseout="document.GI.src='images/GI1.png'"></a><br>
 
 <div style="text-align: center;"><big style="font-weight: bold;"><big><big><span style="font-family: American Typewriter;">Low Cost Ultrasonic Device</span></big></big></big><br>
-<table style="text-align: left; width: 963px; height: 48px; margin-left: auto; margin-right: auto;" border="1" cellpadding="2" cellspacing="2">
+<br>
+
+      
+      
+      <table style="text-align: left; width: 963px; height: 48px; margin-left: auto; margin-right: auto;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="vertical-align: top; background-color: rgb(153, 255, 255); width: 471px; text-align: center;">
-      <div style="background-color: white;"><span style="font-family: American Typewriter;"><br>
-Sensor Number:</span><br>
+	
+ <td style="vertical-align: top; background-color: rgb(153, 255, 255);"><span style="font-family: American Typewriter;"><br></span>
+      <div style="text-align: center;"><span style="font-family: American Typewriter;">Sensor Number:</span><br>
       <br>
       <br>
+
       </div>
       </td>
-      <td style="vertical-align: top; text-align: center; background-color: rgb(153, 255, 255); width: 472px;">
+<td style="vertical-align: top; text-align: center; background-color: rgb(153, 255, 255); width: 472px;">
       <div style="text-align: left; background-color: white;"><span style="font-family: American Typewriter;">Duration:</span><br>
       <span style="font-family: American Typewriter;">Temperature:</span><br>
       <span style="font-family: American Typewriter;">Distance:</span><br>
