best README ever boiz I swear

--- a/LCUD_Project/Group 10.html
+++ b/LCUD_Project/Group 10.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+
+<!-- This page simply displays the names of our group members. -->
+
 <html><head>
 
-
-  
   <meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>Group 10</title>
   
-
-  
-  
   <style type="text/css"></style>
-  
+
   <link rel="icon" href="favicon.ico"></head><body style="color: black; background-color: rgb(229, 229, 229); background-image: url(images/bg.jpg);" alink="#000099" link="#000099" vlink="#a700a7">&nbsp;
 <br>
 
